kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scavenger-hunt
  labels:
    app.kubernetes.io/name: scavenger-hunt
