kustomize/base/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  labels:
    app.kubernetes.io/component: admin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: admin
