kustomize/base/player-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: player
  labels:
    app.kubernetes.io/component: player
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: player
